[gd_scene load_steps=13 format=3 uid="uid://ca27vv4aq66ib"]

[ext_resource type="Script" uid="uid://dsufq71g4fvxe" path="res://entities/enemies/crab/crab.gd" id="1_0rr64"]
[ext_resource type="Script" uid="uid://d8ighe5h5ur7" path="res://entities/enemies/alien.gd" id="3_52iet"]
[ext_resource type="Texture2D" uid="uid://dqofkxw5qg2y3" path="res://entities/enemies/crab/crab.png" id="4_epmtx"]
[ext_resource type="Script" uid="uid://wvthhxshywf7" path="res://common/destruct/destructible_2d.gd" id="4_wahec"]
[ext_resource type="Script" uid="uid://drvvt2ajp8o5f" path="res://common/random_audio_player_2d.gd" id="5_gq6gn"]
[ext_resource type="AudioStream" uid="uid://c31wu2riy7c1a" path="res://entities/bullets/explosion.wav" id="5_uuv3t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_52iet"]
size = Vector2(6, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wahec"]
size = Vector2(6, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_8duip"]
atlas = ExtResource("4_epmtx")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ng305"]
atlas = ExtResource("4_epmtx")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_gq6gn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8duip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ng305")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gq6gn"]
size = Vector2(12, 10)

[node name="Crab" type="Node2D"]
script = ExtResource("1_0rr64")

[node name="Alien" type="Node2D" parent="." node_paths=PackedStringArray("root_node")]
script = ExtResource("3_52iet")
score = 20
root_node = NodePath("..")
metadata/_custom_type_script = "uid://d8ighe5h5ur7"

[node name="Area2D_left" type="Area2D" parent="Alien"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Alien/Area2D_left"]
position = Vector2(-3, 0)
shape = SubResource("RectangleShape2D_52iet")

[node name="Area2D_right" type="Area2D" parent="Alien"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Alien/Area2D_right"]
position = Vector2(3, 0)
shape = SubResource("RectangleShape2D_wahec")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gq6gn")
autoplay = "default"

[node name="Destructable2D" type="Area2D" parent="."]
script = ExtResource("4_wahec")
audio_streams_destroyed = Array[AudioStream]([ExtResource("5_uuv3t")])
metadata/_custom_type_script = "uid://wvthhxshywf7"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Destructable2D"]
shape = SubResource("RectangleShape2D_gq6gn")

[node name="RandomAudioPlayer2D" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
bus = &"sfx"
script = ExtResource("5_gq6gn")
metadata/_custom_type_script = "uid://drvvt2ajp8o5f"

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, 6)
collide_with_areas = true
collide_with_bodies = false
